@@ -4,10 +4,11 @@ require_relative 'envutil'
 
 class TestSystem < Test::Unit::TestCase
   def valid_syntax?(code, fname)
-    code.force_encoding("ascii-8bit")
-    code = code.sub(/\A(?:\s*\#.*$)*(\n)?/n) {
+    code = code.dup.force_encoding("ascii-8bit")
+    code.sub!(/\A(\xef\xbb\xbf)?(\s*\#.*$)*(\n)?/n) {
       "#$&#{"\n" if $1 && !$2}BEGIN{throw tag, :ok}\n"
     }
+    code.force_encoding("us-ascii")
     catch {|tag| eval(code, binding, fname, 0)}
   end
 
